@@ -1,0 +1,6 @@
+The killpets command is a quick and convenient way
+to get rid of all your pets when they are no longer
+useful or are getting in the way.  Any equipment
+they had will be left behind, but you will get no
+experience for their death.  However, it kills them
+instantaneously.
