@@ -75,6 +75,7 @@ CommArray_s Commands[] = {
   {"hiscore", command_hiscore,	0.0},
   {"inventory", command_inventory,0.0},
   {"invoke", command_invoke,	1.0},
+  {"killpets", command_kill_pets,0.0},
   {"listen", command_listen,	0.0},
   {"logs", command_logs,	0.0},
   {"malloc", command_malloc,	0.0},
